Bug 101586 - MediaStream API: Don't trigger any object deletion during RTCPeerConnection::stop
Summary: MediaStream API: Don't trigger any object deletion during RTCPeerConnection::...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Tommy Widenflycht
URL:
Keywords:
Depends on:
Blocks: 56459
  Show dependency treegraph
 
Reported: 2012-11-08 04:37 PST by Tommy Widenflycht
Modified: 2012-11-12 00:32 PST (History)
5 users (show)

See Also:


Attachments
Patch (1.72 KB, patch)
2012-11-08 04:44 PST, Tommy Widenflycht
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tommy Widenflycht 2012-11-08 04:37:32 PST
MediaStream API: Don't trigger any object deletion during RTCPeerConnection::stop
Comment 1 Tommy Widenflycht 2012-11-08 04:44:01 PST
Created attachment 173013 [details]
Patch
Comment 2 Tommy Widenflycht 2012-11-08 04:50:54 PST
Stop calling stop on the RTCPeerConnectionHandler, and don't delete it, when ActiveDOMObject::stop is called on RTCPeerConnection. Due to the async nature of the new API some WebCore objects might be cleaned away which is not allowed at this stage.
Comment 3 Adam Barth 2012-11-09 11:19:17 PST
Comment on attachment 173013 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=173013&action=review

> Source/WebCore/ChangeLog:12
> +        This behaviour is not possible to test unfortunately in webkit.

Do we have tests in Chromium to cover this issue?
Comment 4 WebKit Review Bot 2012-11-09 11:39:31 PST
Comment on attachment 173013 [details]
Patch

Clearing flags on attachment: 173013

Committed r134093: <http://trac.webkit.org/changeset/134093>
Comment 5 WebKit Review Bot 2012-11-09 11:39:34 PST
All reviewed patches have been landed.  Closing bug.
Comment 6 Tommy Widenflycht 2012-11-12 00:32:37 PST
Comment on attachment 173013 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=173013&action=review

>> Source/WebCore/ChangeLog:12
>> +        This behaviour is not possible to test unfortunately in webkit.
> 
> Do we have tests in Chromium to cover this issue?

No, but we (the WebRTC team) have our own bots that run pyautotests and some fuzzer tests. Our SETs is working on having these tests integrated into the main chromium tree.