MediaStream API: Don't trigger any object deletion during RTCPeerConnection::stop https://bugs.webkit.org/show_bug.cgi?id=101586

Reviewed by Adam Barth.

Stop calling stop on the RTCPeerConnectionHandler, and don't delete it, when
ActiveDOMObject::stop is called on RTCPeerConnection. Due to the async nature of the new
API some WebCore objects might be cleaned away which is not allowed at this stage.

This behaviour is not possible to test unfortunately in webkit.

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::stop):


Canonical link: https://commits.webkit.org/119875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134093 268f45cc-cd09-0410-ab3c-d52691b4dbfc